--- a/src/main/resources/templates/fragments/message.html
+++ b/src/main/resources/templates/fragments/message.html
@@ -1,6 +1,6 @@
 <div class = "alert alert-success alert-dismissible fade show text-center message" role = "alert" th:fragment = "message" th:if = "${message != null}">
     [[${message}]]
-    <button aria-label = "Close" class = "close btn-sm" data-dismiss = "alert" type = "button">
+    <button aria-label = "Close" class = "close btn" data-bs-dismiss = "alert" type = "button">
         <span aria-hidden = "true">&times;</span>
     </button>
 </div>
