--- a/src/main/resources/templates/add-warehouse.html
+++ b/src/main/resources/templates/add-warehouse.html
@@ -10,7 +10,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="m-0">Add tutorial</h1>
+                        <h1 class="m-0">Add warehouse</h1>
                     </div>
                     <div class="col-sm-6">
                         <ol class="breadcrumb float-right">
@@ -29,14 +29,14 @@
                         <div class="card">
                             <div class="card-body">
                                 <form enctype="multipart/form-data" id="customForm" method="post" style="margin: 0 auto"
-                                      th:action="@{/warehouse/save}" th:object="${warehouse}">
-                                    <input th:field="*{id}" type="hidden">
-                                    <input th:field="*{users}" type="hidden">
+                                      th:action="@{/warehouse/new/save}" th:object="${warehouse}">
+                                    <input th:field="*{warehouseId}" type="hidden">
+
                                     <div class="form-group row">
                                         <label class="col-sm-1 col-form-label" for="address">Address</label>
                                         <div class="col-sm-11">
                                             <input class="form-control" id="address" maxlength="256" minlength="2"
-                                                   required th:field="*{address}" type="text"/>
+                                                   required th:field="*{warehouseAddress}" type="text"/>
                                         </div>
                                     </div>
 
@@ -44,21 +44,21 @@
                                         <label class="col-sm-1 col-form-label" for="phoneNumber">Phone Number</label>
                                         <div class="col-sm-11">
                                             <input class="form-control" id="phoneNumber" maxlength="256" minlength="2"
-                                                   th:field="*{phoneNumber}" type="text"/>
+                                                   th:field="*{warehousePhoneNumber}" type="text"/>
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-sm-1 col-form-label" for="capacity">Capacity</label>
                                         <div class="col-sm-11">
                                             <input class="form-control" id="capacity" min="1" required step="1"
-                                                   th:field="*{capacity}" type="number"/>
+                                                   th:field="*{warehouseCapacity}" type="number"/>
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label class="col-sm-1 form-check-label" for="active">Active</label>
                                         <div class="col-sm-11">
-                                            <input id="active" th:field="*{active}" type="checkbox"/>
+                                            <input id="active" th:field="*{warehouseActive}" type="checkbox"/>
                                         </div>
                                     </div>
 
