--- a/src/main/resources/templates/user_detail.html
+++ b/src/main/resources/templates/user_detail.html
@@ -85,7 +85,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-sm-1 col-form-label" for="roles">Roles:</label>
-                                        <div class="col-sm-11">
+                                        <div class="col-sm-11" style="align-content: center">
                                             <th:block th:each="role: ${userRoleList}">
                                                 <input class="m-2" disabled id="roles" th:field="*{roles}"
                                                        th:text="${role.name}" th:value="${role.id}" type="checkbox"/>
