--- a/src/main/resources/templates/user_form.html
+++ b/src/main/resources/templates/user_form.html
@@ -32,7 +32,7 @@
                                 <form enctype="multipart/form-data" id="customForm" method="post" style="margin: 0 auto"
                                       th:action="@{/user/save}" th:object="${user}">
                                     <input th:field="*{id}" type="hidden">
-                                    <input th:field="*{password}" type="hidden">
+
                                     <div class="form-group row">
                                         <label class="col-sm-1 col-form-label" for="username">Username</label>
                                         <div class="col-sm-11">
@@ -82,7 +82,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label class="col-sm-1 col-form-label" for="roles">Roles</label>
-                                        <div class="col-sm-11">
+                                        <div class="col-sm-11" style="align-content: center">
                                             <th:block th:each="role: ${userRoleList}">
                                                 <input class="m-2" id="roles" th:field="*{roles}"
                                                        th:text="${role.name}" th:value="${role.id}" type="checkbox"/>
